# graphene-resolver

./: .buildinfo  .pylintrc  CHANGELOG.md  Makefile  README.md  connection.html  dynamic.html  enum.html  genindex.html  index.html  node.html  objects.inv  pyproject.toml  resolver.html  search.html  searchindex.js  union.html
.github/workflows/: pythonpackage.yml
_sources/: index.rst.txt  node.rst.txt  resolver.rst.txt
docs/: conf.py  connection.rst  dynamic.rst  index.rst  union.rst
graphene_resolver/: __init__.py  connection.py  processor.py  resolver.py  schema.py  typedef.py
graphene_resolver/types/: __init__.py
tests/: conftest.py  test_connection_resolver.py  test_dynamic_resolver.py  test_enum.py  test_nested_resolver.py  test_resolver.py  test_resolver_abstract.py  test_resolver_as_interface.py  test_resolver_as_type.py  test_schema_as_type.py  test_union.py
