[tool.poetry]
name = "graphene-resolver"
version = "0.1.5"
description = "Using mongoose-like schema to write apollo-like resolver for graphene."
authors = ["NateScarlet <NateScarlet@Gmail.com>"]
readme = "README.md"
repository = "https://github.com/NateScarlet/graphene-resolver"
documentation = "https://natescarlet.github.io/graphene-resolver/"
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = "^3.7"
graphene = "^2.1"
isodate = "^0.6"
lazy-object-proxy = "^1.4"
phrases-case = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
autopep8 = "^1.4"
rope = "^0.14"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
