[tool.poetry]
name = "graphene-resolver"
version = "0.1.8"
description = "Using mongoose-like schema to write apollo-like resolver for graphene."
authors = ["NateScarlet <NateScarlet@Gmail.com>"]
readme = "README.md"
repository = "https://github.com/NateScarlet/graphene-resolver"
documentation = "https://natescarlet.github.io/graphene-resolver/"
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = "^3.6"
graphene = "^2.1"
isodate = "^0.6"
lazy-object-proxy = "^1.4"
phrases-case = "^0.1.1"
dataclasses = {version="~0.7", python = "~3.6"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
autopep8 = "^1.4"
rope = "^0.16"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
